Add entity classes and implemented entity initialize methods

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,6 @@
-/FreeBaseSearch$1.class
-/FreeBaseSearch$Creator.class
+/Actor.class
+/Author.class
+/BusinessPerson.class
+/League.class
+/Person.class
+/SportsTeam.class
