--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,3 +4,8 @@
 /League.class
 /Person.class
 /SportsTeam.class
+/BoardMember.class
+/Coach.class
+/Helper.class
+/Leadership.class
+/PlayersRoster.class
