--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,16 @@
-/Actor.class
-/Author.class
-/BusinessPerson.class
-/League.class
-/Person.class
-/SportsTeam.class
-/BoardMember.class
-/Coach.class
-/Helper.class
-/Leadership.class
-/PlayersRoster.class
-/Entity.class
+/FreeBaseSearch$1.class
+/Makefile
+/commons-codec-1.6.jar
+/commons-logging-1.1.3.jar
+/fluent-hc-4.3.3.jar
+/httpclient-4.3.3.jar
+/httpclient-cache-4.3.3.jar
+/httpcore-4.3.2.jar
+/httpmime-4.3.3.jar
+/jackson-annotations-2.2.3.jar
+/jackson-core-2.2.3.jar
+/jackson-databind-2.2.3.jar
+/json-path-0.9.0.jar
+/json-simple-1.1.1.jar
+/lib
+/srs2222-proj2
